@@ -6,6 +6,7 @@ Admin Menu x.x-x.x, xxxx-xx-xx
 
 Admin Menu 7.x-3.x, xxxx-xx-xx
 ------------------------------
+#420816 by sun, smk-ka: Improved on-demand loading of dynamic paths.
 #420816 by tim.plunkett: Fixed dynamic Field UI paths for vocabularies.
 #871774 by swentel: Fixed developer modules toggle still uses referer_uri().
 #671760 by sun: Updated for new preprocess defaults.
